--- a/app/views/public/orders/log.html.erb
+++ b/app/views/public/orders/log.html.erb
@@ -4,11 +4,16 @@
     <% if current_customer.cart_items.present? %>
       <table class="table table-hover table-inverse table-bordered">
         <thead>
+          <% @cart_items.each do |cart| %>
           <tr class="info">
             <th>商品名</th>
-            <th>単価(税込)</th>
+            <td><%= cart.item.name %></td>
+            <th>税込</th>
+            <td><%= (cart.item.with_tax_price).to_s(:delimited) %></td>
             <th>数量</th>
+            <td><%= cart.quantity %></td>
             <th>小計</th>
+            <td><%= (cart.item.with_tax_price*cart.quantity).to_s(:delimited) %></td>
           </tr>
         </thead>
         <tbody>
@@ -31,8 +36,10 @@
           <tr>
             <th class="info">商品合計</th>
           </tr>
+          <td><%= cart.quantity %></td>
           <tr>
             <th class="info">請求金額</th>
+            <td><%= @total.to_s(:delimited) %></td>
       </table>
     </div>
     <div class="col-xs-9 billing">
@@ -52,7 +59,7 @@
       </table>
 
       <div class ="col-xs-11">
-      <%= form_with model: @order, url: customers_orders_path, method: :post, local: true do |f| %>
+      <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
         <%= f.hidden_field :postal_code %>
         <%= f.hidden_field :address %>
         <%= f.hidden_field :address_name %>
