--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -6,7 +6,7 @@
   <h2 class="head-line title_h2 text-center">注文情報入力</h2>
    <% if current_customer.cart_items.present? %>
   <div class="col-xs-offset-1">
-      <%= form_with :model => @order, method: :post, local: true  do |f| %>
+      <%= form_with :model => @order,url:log_orders_path,method: :post, local: true  do |f| %>
         <h3 class="col-xs-5 sub-head text-center">支払い方法</h3>
           <div class="col-xs-10 radio text-center">
             <%= f.radio_button :payment_method, "credit_card", checked: true %>
