--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,3 +10,24 @@
  .public-menu{
   font-family: 'Kosugi Maru', sans-serif;
  }
+ 
+ a.circle {
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  background: #fff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+}
+
+a.circle i {
+  font-size: 150%;
+  line-height: 50px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  letter-spacing: 0;
+}
+a.circle:hover i {
+  line-height: 55px;
+}
