--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -2,7 +2,8 @@
   <div class="row my-3">
     <span class="rounded bg-light py-2 px-3 font-weight-bold">ジャンル編集</span>
   </div>
-
+  
+  <div>  
     <%= form_with model: [:admin, @genre] do |f| %>
 
       <% if @genre.errors.any? %>
@@ -14,10 +15,10 @@
       </ul>
       <% end %>
 
-      <div class="field">
-        <%= f.label "ジャンル名" %>
-        <%= f.text_field :name %>
-      </div>
+      <%= f.label "ジャンル名", class: "mr-5" %>
+      <%= f.text_field :name, class: "mr-5" %>
+        
       <%= f.submit "変更を保存", class: "btn btn-success" %>
     <% end %>
+  </div>
 </div>
