--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -15,18 +15,18 @@
       </ul>
       <% end %>
 
-      <div class="field">
-        <%= f.label "ジャンル名" %>
-        <%= f.text_field :name, placeholder: "ジャンル名" %>
-      </div>
+      <%= f.label "ジャンル名", class: "mr-5" %>
+      <%= f.text_field :name, placeholder: "ジャンル名", class: "mr-5" %>
+      
       <%= f.submit "新規登録", class: "btn btn-success" %>
     <% end %>
   </div>
 
-  <div class="row">
+  <div class="row w-50 my-3">
     <table class="table table-hover">
-      <thead>
-        <th class="bg-light">ジャンル</th>
+      <thead class="bg-light">
+        <th class="text-center">ジャンル</th>
+        <th></th>
       </thead>
       <tbody>
         <tr>
