--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,49 +1,41 @@
-<h1>登録情報編集画面</h1>
-<div class="row">
-<div class="col-xs-12">
+<div class="col-2 offset-2 my-5 bg-light text-black text-center">
+  <h3>登録情報編集</h3>
+</div>
 
-<h2 class="head-line title_h2 text-center">登録情報編集</h2>
-
-    <%= form_with(model:@customer,url:customer_path(id: @customer.id),local: true ,method: :patch) do |f| %>
-
-      <div class="col-xs-10">
-        <div class="form-group col-xs-12">
-          <%= f.label :"氏名", class: "col-sm-3 control-label" %>
-          <%= f.text_field :last_name, class: "last_name col-sm-3 form-control-static name" %>
-          <%= f.text_field :first_name, class: "first_name col-sm-3 form-control-static name" %>
-        </div>
-        <div class="form-group col-xs-12">
-          <%= f.label :"フリガナ", class: "col-sm-3 control-label" %>
-          <%= f.text_field :last_name_kana, class: "last_name_kana col-sm-3 form-control-static name" %>
-          <%= f.text_field :first_name_kana, class: "first_name_kana col-sm-3 form-control-static name" %>
-        </div>
-        <div class="form-group col-xs-12">
-          <%= f.label :"メールアドレス", class: "col-sm-3 control-label" %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "col-sm-6 form-control-static" %>
-        </div>
-        <div class="form-group col-xs-12">
-          <%= f.label :"郵便番号", class: "col-sm-3 control-label" %>
-          <%= f.text_field :postal_code, class: "col-sm-2 form-control-static" %>
-        </div>
-        <div class="form-group col-xs-12">
-          <%= f.label :"住所", class: "col-sm-3 control-label" %>
-          <%= f.text_field :address, class: "col-sm-9 form-control-static" %>
-        </div>
-        <div class="form-group col-xs-12">
-          <%= f.label :"電話番号(ハイフンなし)", class: "col-sm-3 control-label" %>
-          <%= f.text_field :phone_number, class: "col-sm-2 form-control-static" %>
-        </div>
-      </div>
+<div class="container">
+  <%= form_with(model:@customer,url:customer_path(id: @customer.id),local: true ,method: :patch) do |f| %>
   
-      <div class="actions col-xs-9 col-xs-offset-3">
-        <%= f.submit "編集内容を保存する", class: "btn btn-primary save col-xs-6" %>
-       
-        <%= link_to '退会する', quit_customers_path, class: "glyphicon glyphicon-tint btn btn-danger"%>
-      </div>
-  
-    <div class="col-xs-12">
-      <%= link_to "戻る", customer_path(id: @customer.id), class: "glyphicon glyphicon-home btn btn-info" %>
-       <% end %>
-    </div>
+  <div class="form-group row field">
+    <%= f.label :"氏名", class: "col-sm-3 control-label" %>
+    <%= f.text_field :last_name, class: "last_name col-sm-3 form-control-static name" %>
+    <%= f.text_field :first_name, class: "first_name col-sm-3 form-control-static name ml-5" %>
   </div>
+  <div class="form-group row field">
+    <%= f.label :"フリガナ", class: "col-sm-3 control-label" %>
+    <%= f.text_field :last_name_kana, class: "last_name_kana col-sm-3 form-control-static name" %>
+    <%= f.text_field :first_name_kana, class: "first_name_kana col-sm-3 form-control-static name ml-5" %>
+  </div>
+  <div class="form-group row field">
+    <%= f.label :"郵便番号", class: "col-sm-3 control-label" %>
+    <%= f.text_field :postal_code, class: "col-sm-2 form-control-static" %>
+  </div>
+  <div class="form-group row field">
+    <%= f.label :"住所", class: "col-sm-3 control-label" %>
+    <%= f.text_field :address, class: "col-sm-9 form-control-static" %>
+  </div>
+  <div class="form-group row field">
+    <%= f.label :"電話番号", class: "col-sm-3 control-label" %>
+    <%= f.text_field :phone_number, class: "col-sm-2 form-control-static" %>
+  </div>
+  <div class="form-group row field">
+    <%= f.label :"メールアドレス", class: "col-sm-3 control-label" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control-static" %>
+  </div>
+
+  <div class="row actions offset-3 justify-content-between w-50">
+    <%= f.submit "編集内容を保存", class: "btn btn-success" %>
+    <%= link_to "戻る", customer_path(id: @customer.id), class: "glyphicon glyphicon-home btn btn-info" %>
+    <%= link_to '退会する', quit_customers_path, class: "glyphicon glyphicon-tint btn btn-danger"%>
+  </div>
+  <% end %>
 </div>
