--- a/app/views/public/customers/quit.html.erb
+++ b/app/views/public/customers/quit.html.erb
@@ -1,15 +1,16 @@
-<h1>退会ページ</h1>
-<div class="quit">
+<div class="d-flex justify-content-center my-5">
   <strong>本当に退会しますか？</strong>
+</div>
 
-    <div class="quit-msg">
-      退会すると会員情報登録や<br>
-      これまでの購入履歴が閲覧できなくなります。<br>
-      <br>
-      退会する場合は,「退会する」をクリックしてください。
-    </div>
+<div class="d-flex justify-content-center mb-2">
+  <p class="text-center">
+  退会すると、会員情報登録や<br>
+  これまでの購入履歴が閲覧できなくなります。<br>
+  退会する場合は,「退会する」をクリックしてください。
+  </p>
+</div>
 
-    <%= link_to "退会しない",  customer_path(@customer.id), method: :get,class: 'glyphicon glyphicon-home btn btn-primary' %>
-    <%= link_to "退会する",  out_customers_path, method: :patch, data: {confirm: "本当に退会してもよろしいですか？"}, class: "glyphicon glyphicon-tint btn btn-danger" %>
-
+<div class="d-flex justify-content-center">
+  <%= link_to "退会しない", customer_path(@customer.id), method: :get, class: 'glyphicon glyphicon-home btn btn-primary' %>
+  <%= link_to "退会する", out_customers_path, method: :patch, data: {confirm: "本当に退会してもよろしいですか？"}, class: "glyphicon glyphicon-tint btn btn-danger ml-3" %>
 </div>
