--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,46 +1,53 @@
+<div class="col-2 offset-2 my-5 bg-light text-black text-center">
+  <h3>マイページ</h3>
+</div>
 
-<div class="row">
-<div class="col-xs-offset-1 col-xs-8">
-<h2 class="head-line text-center title_h2">マイページ</h2>
-<p><strong class="information-link"><i class="far fa-user"></i>登録情報</strong>
-<%= link_to " 編集する", customers_information_edit_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
+<div class="container-fluid">
+	<div class="row mb-3 ml-5">
+		<div class="col-2 d-flex justify-content-between">
+			<strong class="information-link"><i class="far fa-user"></i>登録情報</strong>
+			<%= link_to " 編集する", customers_information_edit_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
+		</div>
+	</div>
 
-<table class="table table-bordered table-condensed" >
-<tbody>
-  <tr>
-      <td class="info col-xs-2">氏名</td>
-	<td class="text-left"><p><%= @customer.last_name %> <%= @customer.first_name %></p></td>
-	</tr>
-	<tr>
-						<td class="info">カナ</td>
-						<td class="text-left"><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></td>
-					</tr>
-					<tr>
-						<td class="info">郵便番号</td>
-						<td class="text-left"><%= @customer.postal_code %></td>
-					</tr>
-					<tr>
-						<td class="info">住所</td>
-						<td class="text-left"><%= @customer.address %></td>
-					</tr>
-					<tr>
-						<td class="info">電話番号</td>
-						<td class="text-left"><%= @customer.phone_number %></td>
-					</tr>
-					<tr>
-						<td class="info">メールアドレス</td>
-						<td class="text-left"><%= @customer.email %></td>
-					</tr>
-				</tbody>
-			</table>
-			<div class="mypage-bottoms">
-				<P><strong class="shipping-link">配送先</strong>
-					<%= link_to " 一覧を見る", shipping_addresses_path, data: {"turbolinks" => false}, class: "glyphicon glyphicon-folder-open btn btn-info" %>
-				</p>
-				<p><strong class="order-link">注文履歴</strong>
-					<%= link_to " 一覧を見る", orders_path, class: "glyphicon glyphicon-folder-open btn btn-info" %>
-				</p>
-			</div>
+	<table class="table table-bordered table-condensed w-50 ml-5" >
+		<tr>
+			<th scope="row" class="table-secondary" style="width: 15%">氏名</th>
+			<td style="width: 40%"><%= @customer.last_name %> <%= @customer.first_name %></td>
+		</tr>
+		<tr>
+			<th scope="row" class="table-secondary" style="width: 15%">カナ</th>
+			<td style="width: 40%"><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></td>
+		</tr>
+		<tr>
+			<th scope="row" class="table-secondary" style="width: 15%">郵便番号</th>
+			<td style="width: 40%"><%= @customer.postal_code %></td>
+		</tr>
+		<tr>
+			<th scope="row" class="table-secondary" style="width: 15%">住所</th>
+			<td style="width: 40%"><%= @customer.address %></td>
+		</tr>
+		<tr>
+			<th scope="row" class="table-secondary" style="width: 15%">電話番号</th>
+			<td style="width: 40%"><%= @customer.phone_number %></td>
+		</tr>
+		<tr>
+			<th scope="row" class="table-secondary" style="width: 15%">メールアドレス</th>
+			<td style="width: 40%"><%= @customer.email %></td>
+		</tr>
+	</table>
 			
-			</div>
-			</div>
+	<div class="row mb-3 ml-5">
+		<div class="col-2 d-flex justify-content-between">
+			<strong class="shipping-link">配送先</strong>
+			<%= link_to " 一覧を見る", shipping_addresses_path, data: {"turbolinks" => false}, class: "glyphicon glyphicon-folder-open btn btn-primary" %>
+		</div>
+	</div>
+	
+	<div class="row mb-3 ml-5">
+		<div class="col-2 d-flex justify-content-between">
+			<strong class="order-link">注文履歴</strong>
+			<%= link_to " 一覧を見る", orders_path, class: "glyphicon glyphicon-folder-open btn btn-primary" %>
+		</div>
+	</div>
+</div>
