--- a/app/views/public/searches/search_result.html.erb
+++ b/app/views/public/searches/search_result.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td scope="row"><%= item.id %></td>
         <td>
-          <%= link_to admin_item_path(item.id) do %>
+          <%= link_to item_path(item.id) do %>
             <%= item.name %>
           <% end %>
           </td>
