--- a/app/views/public/orders/log.html.erb
+++ b/app/views/public/orders/log.html.erb
@@ -3,11 +3,12 @@
   <div class="col-xs-9">
     <% if current_customer.cart_items.present? %>
       <table class="table table-hover table-inverse table-bordered">
-        <thead>
+        
            <th>商品名</th>
            <th>単価</th>
            <th>数量</th>
            <th>小計</th>
+           <% total = 0 %>
           <% @cart_items.each do |cart| %>
           <tr class="info">
            
@@ -19,8 +20,9 @@
             
             <td><%= (cart.item.with_tax_price)*(cart.order_item_quantity.to_i) %></td>
           </tr>
+          <% total += (cart.item.with_tax_price)*(cart.order_item_quantity.to_i) %>
            <% end %>
-        </thead>
+      
       </table>
     </div>
     <div class="col-xs-3 billing">
@@ -28,15 +30,17 @@
          <tr>
             <th class="info">送料</th>
           </tr>
-           <td><%= 800 %></td>
+          <% @order.postage=800 %>
+           <td><%= @order.postage %></td>
          <tr>
             <th class="info">商品合計</th>
           </tr>
-           <td><%= @total%></td>
+           <td><%= total.to_i %></td>
           <tr>
             <th class="info">請求金額</th>
+            <% @order.billing_amount = @order.postage + total.to_i %>
           </tr>
-           <td><%= @total + 800%></td>
+           <td><%= @order.billing_amount %></td>
         
       </table>
     </div>
@@ -58,10 +62,13 @@
 
       <div class ="col-xs-11">
       <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
+        <%= f.hidden_field :customer_id %>
         <%= f.hidden_field :postal_code %>
         <%= f.hidden_field :address %>
         <%= f.hidden_field :address_name %>
         <%= f.hidden_field :payment_method %>
+        <%= f.hidden_field :billing_amount %>
+        <%= f.hidden_field :status %>
         <%= link_to "注文情報入力へ戻る", new_order_path, class: "btn btn-info col-xs-3 back" %>
         　　<i class="fas fa-shipping-fast fa-2x"></i>
         <%= f.submit "購入を確定する", class: "btn btn-warning center-block col-xs-5" %>
