--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -7,37 +7,41 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-　<div class="form-group row field">
-    <%= f.label :"氏名", class: "col-sm-3 control-label" %>
-    <%= f.text_field :last_name, class: "last_name col-sm-3 form-control-static name" %>
-    <%= f.text_field :first_name, class: "first_name col-sm-3 form-control-static name ml-5" %>
+　<div class="form-group field">
+    <%= f.label :"氏名", class: "col-sm-2 control-label" %>
+    <%= f.label :"（姓）　", class: "control-label ml-4" %>
+    <%= f.text_field :last_name, class: "last_name col-sm-2 form-control-static name" %>
+    <%= f.label :"（名）　", class: "control-label" %>
+    <%= f.text_field :first_name, class: "first_name col-sm-2 form-control-static name" %>
   </div>
-  <div class="form-group row field">
-    <%= f.label :"フリガナ", class: "col-sm-3 control-label" %>
-    <%= f.text_field :last_name_kana, class: "last_name_kana col-sm-3 form-control-static name" %>
-    <%= f.text_field :first_name_kana, class: "first_name_kana col-sm-3 form-control-static name ml-5" %>
+  <div class="form-group field">
+    <%= f.label :"フリガナ", class: "col-sm-2 control-label" %>
+    <%= f.label :"（セイ）", class: "control-label ml-4" %>
+    <%= f.text_field :last_name_kana, class: "last_name_kana col-sm-2 form-control-static name" %>
+    <%= f.label :"（メイ）", class: "control-label" %>
+    <%= f.text_field :first_name_kana, class: "first_name_kana col-sm-2 form-control-static name" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"郵便番号（ハイフンなし）", class: "col-sm-3 control-label" %>
     <%= f.text_field :postal_code, class: "col-sm-2 form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"住所", class: "col-sm-3 control-label" %>
-    <%= f.text_field :address, class: "col-sm-9 form-control-static" %>
+    <%= f.text_field :address, class: "col-sm-8 form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"電話番号（ハイフンなし）", class: "col-sm-3 control-label" %>
     <%= f.text_field :phone_number, class: "col-sm-2 form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"メールアドレス", class: "col-sm-3 control-label" %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"パスワード(6文字以上)" , class: "col-sm-3 control-label" %>
     <%= f.password_field :password, autocomplete: "new-password", class: "form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"パスワード(確認用)", class: "col-sm-3 control-label" %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control-static" %>
   </div>
