--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -5,29 +5,29 @@
 <div class="container">
   <%= form_with(model:@customer,url:customer_path(id: @customer.id),local: true ,method: :patch) do |f| %>
   
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"氏名", class: "col-sm-3 control-label" %>
     <%= f.text_field :last_name, class: "last_name col-sm-3 form-control-static name" %>
     <%= f.text_field :first_name, class: "first_name col-sm-3 form-control-static name ml-5" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"フリガナ", class: "col-sm-3 control-label" %>
     <%= f.text_field :last_name_kana, class: "last_name_kana col-sm-3 form-control-static name" %>
     <%= f.text_field :first_name_kana, class: "first_name_kana col-sm-3 form-control-static name ml-5" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"郵便番号", class: "col-sm-3 control-label" %>
     <%= f.text_field :postal_code, class: "col-sm-2 form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"住所", class: "col-sm-3 control-label" %>
-    <%= f.text_field :address, class: "col-sm-9 form-control-static" %>
+    <%= f.text_field :address, class: "col-sm-8 form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"電話番号", class: "col-sm-3 control-label" %>
     <%= f.text_field :phone_number, class: "col-sm-2 form-control-static" %>
   </div>
-  <div class="form-group row field">
+  <div class="form-group field">
     <%= f.label :"メールアドレス", class: "col-sm-3 control-label" %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control-static" %>
   </div>
