--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -25,6 +25,10 @@
     		    <%= order.address %><br>
     		    <%= order.address_name %>
     		    </td>
+    		    <td>
+    		    <% order.order_items.each do |order| %>
+    		          	<%= order.item.name %><br>
+    		          <% end %></td>
     		    <td class="text-right">
     		    <%= order.billing_amount %>円
     		    </td>
